feat(ops): ops as an standalone app